--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,104 @@
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUQjIg1_i6t8kCHKm459WxRxC7mw9c.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUQjIg1_i6t8kCHKm459WxRzS7mw9c.woff2) format('woff2');
+    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUQjIg1_i6t8kCHKm459WxRxi7mw9c.woff2) format('woff2');
+    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUQjIg1_i6t8kCHKm459WxRxy7mw9c.woff2) format('woff2');
+    unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUQjIg1_i6t8kCHKm459WxRyS7m.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
+    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2) format('woff2');
+    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format('woff2');
+    unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+
+button {
+    font-weight: inherit;
+    font-family: inherit;
+    font-size: inherit;
+}
+
 * {
-    transition: color 1s ease-in-out;
-    transition: background-color 1s ease-in-out;
+    transition: color 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -32,6 +130,7 @@ body {
     --bg_color_dec: 255, 255, 255;
     --bg_color: white;
     --accent_color: #FFB703;
+    --accent_color_dec: 255, 183, 3;
     background-color: var(--bg_color);
     color: var(--main_color);
 }
@@ -42,6 +141,7 @@ body.another {
     --main_color: rgb(255, 255, 255);
     --bg_color: black;
     --accent_color: #219EBC;
+    --accent_color_dec: 33, 158, 188;
     --bg_color_dec: 0, 0, 0;
 }
 
@@ -49,8 +149,9 @@ body.another {
     body {
         --main_color_dec: 255, 255, 255;
         --main_color: rgb(255, 255, 255);
-        --bg_color: black;
+        --bg_color: rgb(0, 0, 0);
         --accent_color: #219EBC;
+        --accent_color_dec: 33, 158, 188;
         --bg_color_dec: 0, 0, 0;
     }
 
@@ -60,10 +161,12 @@ body.another {
         --bg_color_dec: 255, 255, 255;
         --bg_color: white;
         --accent_color: #FFB703;
+        --accent_color_dec: 255, 183, 3;
     }
 }
 
 .main_highlight {
+    margin-bottom: 25px;
     font-weight: 700;
     font-size: 40px;
     z-index: 1;
@@ -92,8 +195,16 @@ body.another {
     justify-content: space-between;
 }
 
+caption {
+    caption-side: top;
+    text-align: left;
+}
 
 .look {
+    font-weight: 600;
+}
+
+.bold {
     font-weight: 600;
 }
 
@@ -171,7 +282,6 @@ footer {
 
 
 .equation {
-    margin-left: 5px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 600;
 }
@@ -201,6 +311,7 @@ footer {
     list-style-position: inside;
 }
 
+
 .table_responsive {
     max-width: 100%;
     overflow-x: auto;
@@ -214,7 +325,7 @@ footer {
 
 .nav_button {
     padding: 8px 10px;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 500;
     border: none;
     border-radius: 5px;
