--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -1,4 +1,5 @@
 .modal {
+    
     z-index: 10;
     transition: all 1s;
     position: fixed;
@@ -18,6 +19,8 @@
 }
 
 .content {
+    max-height: 100%;
+    overflow-y: auto;
     max-width: 75%;
     background-color: var(--bg_color);
     padding: 30px;
@@ -30,6 +33,7 @@
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 20px;
+    gap: 15px;
 }
 
 .close {
